src/components/Banner/Banner.module.css
.banner {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 2rem 2.75rem;
    gap: 2rem;

    border-radius: 1rem;
    border-color: #6666ff;
    border-width: 2px;
    border-style: solid;
    background-color: #ffffff;

    @media (max-width: 600px) {
        padding: 1.25rem;
        gap: 1.25rem;
    }
}

.bannerHeader {
    display: flex;
    align-items: center;
    align-self: flex-start;
}

.bannerHeader:has(.bannerCloseButton) {
    /* 2.25rem - close button width, 1.25rem - close button margin */
    padding-right: calc(2.25rem + 1.25rem);
}

.bannerTitle {
    font-family: 'Poppins', serif;
    font-size: 1.5rem;
    font-weight: 600;
    line-height: 1.75;
    color: #0b002e;
}

.bannerContent {
    z-index: 1;
}

.bannerContent {
    z-index: 1;

    display: flex;
    flex-direction: row;
    gap: 1rem;
}

.bannerActions {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1.25rem;
    width: 100%;
    z-index: 1;

    @media (max-width: 600px) {
        flex-direction: column;
    }
}

.bannerAction {
    display: flex;
    justify-content: center;
    align-items: center;

    @media (max-width: 600px) {
        width: 100%;
    }
}

.bannerCloseButton {
    position: absolute;

    inset-inline-end: 0;
    inset-block-start: 0;

    margin-inline-end: 0.75rem;
    margin-block-start: 0.75rem;
    z-index: 1;
}

.bannerImage {
    position: absolute;

    inset-inline-end: 0;
    inset-block-end: 0;

    width: 18.5rem;
    height: 10.25rem;

    @media (max-width: 600px) {
        display: none;
    }
}

.bannerImage img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    object-position: right;
    border-radius: 1rem;
    z-index: 0;
}

